--- a/playbooks/roles/proxy/templates/docker/locations/apps.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/apps.conf
@@ -1,6 +1,7 @@
 # apps
 location /v3/apps
-{          
+{         
+{% if "apps" in proxy_nginx_service_list %} 
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
@@ -8,6 +9,9 @@ location /v3/apps
     
     set $upstream {{ apps_host | default("http://apps-api")}}:{{ apps_port | default("8080")}};
     proxy_pass $upstream;
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}    
 
     proxy_redirect off;
     proxy_set_header Host $host;
