--- a/playbooks/roles/proxy/templates/docker/locations/files.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/files.conf
@@ -2,12 +2,16 @@
 # files
 location /v3/files
 {
+{% if "files" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
     set $upstream {{ files_host | default("http://files-api")}}:{{ files_port | default("8080")}};
     proxy_pass $upstream;
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
 
     proxy_redirect off;
     proxy_set_header Host $host;
