--- a/playbooks/roles/proxy/templates/docker/locations/globus-proxy.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/globus-proxy.conf
@@ -1,9 +1,13 @@
 # globus-proxy
 location /v3/globus-proxy
 {            
+{% if "globus-proxy" in proxy_nginx_service_list %}
     resolver 127.0.0.11;
     set $upstream "http://globus-proxy:5000";
     proxy_pass $upstream;
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}    
     
     proxy_redirect off;
     proxy_set_header Host $host;
