--- a/playbooks/roles/proxy/templates/docker/locations/jobs.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/jobs.conf
@@ -1,6 +1,7 @@
 # jobs
 location /v3/jobs
 {            
+{% if "jobs" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
@@ -8,6 +9,9 @@ location /v3/jobs
     set $upstream {{ jobs_host | default("http://jobs-api")}}:{{ jobs_port | default("8080")}};
     
     proxy_pass $upstream;
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
     
 
     proxy_redirect off;
