--- a/playbooks/roles/proxy/templates/docker/locations/meta.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/meta.conf
@@ -1,9 +1,13 @@
-
+{% if "meta" in proxy_nginx_service_list or site_type == 2 %}
 # meta
 location /v3/meta
 {            
+{% if "meta" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
+{% if proxy_meta_custom_block is defined %}
+        {{ proxy_meta_custom_block | indent(width=12) }}
+{% endif %}
 
     resolver 127.0.0.11;
     set $upstream "http://restheart-security:8080";
@@ -12,4 +16,8 @@ location /v3/meta
 
     proxy_redirect off;
     proxy_set_header Host $host;
+{% else %}
+        proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
 }
+{% endif %}
