--- a/playbooks/roles/proxy/templates/docker/locations/pgrest.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/pgrest.conf
@@ -1,9 +1,13 @@
-
+{% if "pgrest" in proxy_nginx_service_list or site_type == 2 %}
 # pgrest
 location /v3/pgrest
 {            
+{% if "pgrest" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
+{% if proxy_pgrest_custom_block is defined %}
+    {{ proxy_pgrest_custom_block | indent(width=12) }}
+{% endif %}
 
     resolver 127.0.0.11;
     set $upstream "http://pgrest-api:5000";
@@ -12,6 +16,9 @@ location /v3/pgrest
 
     proxy_redirect off;
     proxy_set_header Host $host;
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}     
 {%- if custom_host_01 is defined %}
     # workaround for for custom setups
     if ($host = '{{ custom_host_01 }}') {
@@ -26,4 +33,5 @@ location /v3/pgrest
 {%- endif %}
 
 }
+{% endif %}
 
