--- a/playbooks/roles/proxy/templates/docker/locations/security.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/security.conf
@@ -1,6 +1,7 @@
 # security 
 location /v3/security
 {            
+{% if "security" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
@@ -8,6 +9,9 @@ location /v3/security
     set $upstream "http://security-api:8080";
     proxy_pass $upstream;
     
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
 
     proxy_redirect off;
     proxy_set_header Host $host;
