--- a/playbooks/roles/proxy/templates/docker/locations/systems.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/systems.conf
@@ -2,6 +2,7 @@
 # systems
 location /v3/systems
 {            
+{% if "systems" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
@@ -9,6 +10,9 @@ location /v3/systems
     set $upstream {{ systems_host | default("http://systems-api")}}:{{ systems_port | default("8080")}};
     proxy_pass $upstream;
     
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
 
     proxy_redirect off;
     proxy_set_header Host $host;
