--- a/playbooks/roles/proxy/templates/docker/locations/tapisui.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/tapisui.conf
@@ -11,3 +11,9 @@ location /
     proxy_redirect off;
     proxy_set_header Host $host;
 }
+
+location ~* ^/(tapis-ui|tapisui|ui)
+{
+    # rewrite path to move /tapis-ui, /tapisui, and /ui traffic to /
+    return 301 https://$host/;
+}
