--- a/playbooks/roles/proxy/templates/docker/locations/workflows.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/workflows.conf
@@ -1,6 +1,8 @@
+{% if "workflows" in proxy_nginx_service_list or site_type == 2 %}
 # workflows
 location /v3/workflows
 {            
+{% if "workflows" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
@@ -8,8 +10,12 @@ location /v3/workflows
     set $upstream "http://workflows-api-service:8000";
     proxy_pass $upstream;
     
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %} 
 
     proxy_redirect off;
     proxy_set_header Host $host;
 }
+{% endif %} 
 
