--- a/playbooks/roles/proxy/templates/docker/locations/authenticator.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/authenticator.conf
@@ -1,12 +1,16 @@
 # authenticator
 location /v3/oauth2
 {            
+{% if "authenticator" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json;
 
     resolver 127.0.0.11;
     set $upstream "http://authenticator-api:5000";
     proxy_pass $upstream;
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
 
     proxy_redirect off;
     proxy_set_header Host $host;
