--- a/playbooks/roles/proxy/templates/docker/locations/notifications.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/notifications.conf
@@ -1,13 +1,17 @@
 # notifications
 location /v3/notifications
 {            
+{% if "notifications" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
-    # set $upstream "http://notifications-api:8080";
-    set $upstream {{ notifications_host | default("http://notifications-api")}}:{{ notifications_port | default("8080")}};
+    set $upstream "http://notifications-api:8080";
+    # set $upstream {{ notifications_host | default("http://notifications-api")}}:{{ notifications_port | default("8080")}};
     proxy_pass $upstream;
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}       
     
 
     proxy_redirect off;
