--- a/playbooks/roles/proxy/templates/docker/locations/pods.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/pods.conf
@@ -1,15 +1,21 @@
+{% if "pods" in proxy_nginx_service_list or site_type == 2 %}
 # pods
 location /v3/pods
 {            
+{% if "pods" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
     set $upstream "{{ proxy_service_url }}";
     proxy_pass $upstream;
+{% else %}
+    proxy_pass {{ proxy_primary_site_admin_tenant_base_url }};
+{% endif %}        
     
 
     proxy_redirect off;
     proxy_set_header Host $host;
 }
+{% endif %}        
 
