--- a/playbooks/roles/proxy/templates/docker/locations/sites.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/sites.conf
@@ -2,12 +2,17 @@
 # sites
 location /v3/sites
 {            
+{% if "tenants" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
     set $upstream "http://tenants-api:5000";
     proxy_pass $upstream;
+
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}
     
 
     proxy_redirect off;
