--- a/playbooks/roles/proxy/templates/docker/locations/streams.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/streams.conf
@@ -1,13 +1,18 @@
+{% if "streams" in proxy_nginx_service_list or site_type == 2 %}
 # streams
 location /v3/streams
 {            
+{% if "streams" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
     resolver 127.0.0.11;
     set $upstream "http://streams-api:5000";    
     proxy_pass $upstream;
-    
+
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}    
 
     proxy_redirect off;
     proxy_set_header Host $host;
@@ -20,3 +25,4 @@ location /v3/streams
         return 204;
     }
 }
+{% endif %}
