tenants routing testing

--- a/playbooks/roles/proxy/templates/docker/locations/tenants.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/tenants.conf
@@ -1,7 +1,7 @@
 # tenants 
 location /v3/tenants
 {            
-{% if "tenants" in proxy_nginx_service_list %}
+{% if "tenants" in proxy_nginx_service_list and site_type == 1%}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
