--- a/playbooks/roles/security/templates/kube/postgres_16/pvc-postgres.yml
+++ b/playbooks/roles/security/templates/kube/postgres_16/pvc-postgres.yml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{security_postgres_pvc}}
+  name: sk-postgres-16-vol
 spec:
   accessModes:
     - ReadWriteOnce
