--- a/playbooks/roles/apps/templates/kube/postgres/pvc.yml
+++ b/playbooks/roles/apps/templates/kube/postgres/pvc.yml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{apps_postgres_pvc}}
+  name: apps-postgres-vol01
 spec:
   accessModes:
     - ReadWriteOnce
