--- a/playbooks/roles/apps/templates/kube/postgres_16/deploy.yml
+++ b/playbooks/roles/apps/templates/kube/postgres_16/deploy.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: apps-postgres-16
-        image: {{ apps_postgres_image }}
+        image: postgres:16
         ports:
         - name: postgres
           containerPort: 5432
@@ -31,4 +31,4 @@ spec:
       volumes:
       - name: apps-pg-data
         persistentVolumeClaim:
-          claimName: {{apps_postgres_pvc}}
+          claimName: apps-postgres-16-vol
