--- a/playbooks/roles/jobs/templates/kube/postgres/pvc.yml
+++ b/playbooks/roles/jobs/templates/kube/postgres/pvc.yml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{jobs_postgres_pvc}}
+  name: jobs-postgres-vol02
 spec:
   accessModes:
     - ReadWriteOnce
