--- a/playbooks/roles/jobs/templates/kube/postgres_16/pvc-postgres.yml
+++ b/playbooks/roles/jobs/templates/kube/postgres_16/pvc-postgres.yml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{jobs_postgres_pvc}}
+  name: jobs-postgres-16-vol
 spec:
   accessModes:
     - ReadWriteOnce
