--- a/playbooks/roles/notifications/templates/kube/postgres_16/pvc-postgres.yml
+++ b/playbooks/roles/notifications/templates/kube/postgres_16/pvc-postgres.yml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{notifications_postgres_pvc}}
+  name: notifications-postgres-16-vol
 spec:
   accessModes:
     - ReadWriteOnce
