--- a/playbooks/roles/security/templates/kube/postgres/pvc.yml
+++ b/playbooks/roles/security/templates/kube/postgres/pvc.yml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{security_postgres_pvc}}
+  name: sk-postgres-vol02
 spec:
   accessModes:
     - ReadWriteOnce
