--- a/playbooks/roles/systems/templates/kube/postgres/pvc.yml
+++ b/playbooks/roles/systems/templates/kube/postgres/pvc.yml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{systems_postgres_pvc}}
+  name: systems-postgres-vol01
 spec:
   accessModes:
     - ReadWriteOnce
