client_max_body_size to 10G for uploads
Previously relied on a global scope setting. Setting this for just pods.

--- a/playbooks/roles/proxy/templates/kube/nginx/locations/pods.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/pods.conf
@@ -4,6 +4,7 @@
 location /v3/pods
 {
 {% if "pods" in proxy_nginx_service_list %}
+    client_max_body_size 10G;
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
     # proxy_pass http://129.114.35.117:30854; # to set alternative pods traefik server
