rename mlhub, add vars and images

--- a/playbooks/roles/mlhub/templates/kube/traefik/deployment.yaml
+++ b/playbooks/roles/mlhub/templates/kube/traefik/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: mlhub-traefik-account
       containers:
         - name: traefik
-          image: traefik:v3.2
+          image: {{mlhub_traefik_image}}
           args:
             - --api.insecure
             - --providers.kubernetesingress
