--- a/playbooks/roles/mlhub/templates/kube/nfs/deployment.yaml
+++ b/playbooks/roles/mlhub/templates/kube/nfs/deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nfs-server-deployment
+  name: mlhub-nfs-server-deployment
 spec:
   selector:
     matchLabels:
-      app: nfs-server-deployment
+      app: mlhub-nfs-server-deployment
   template:
     metadata:
       labels:
-        app: nfs-server-deployment
+        app: mlhub-nfs-server-deployment
     spec:
       initContainers:
       - name: create-mount-dirs
         image: busybox
         command: ["sh", "-c", "mkdir -p /nfsshare/mlhub/models /nfsshare/mlhub/datasets /nfsshare/mlhub/inference /nfsshare/mlhub/training"]
       containers:
-      - name: nfs-server
-        image: itsthenetwork/nfs-server-alpine:latest
+      - name: mlhub-nfs-server
+        image: {{mlhub_nfs_server_image}}
         securityContext:
           privileged: true
         env:
@@ -33,5 +33,5 @@ spec:
       volumes:
       - name: nfs-data
         persistentVolumeClaim:
-          claimName: nfs-server-pvc
+          claimName: mlhub-nfs-server-pvc
 
