--- a/playbooks/roles/mlhub/templates/kube/models/deployment.yaml
+++ b/playbooks/roles/mlhub/templates/kube/models/deployment.yaml
@@ -46,5 +46,5 @@ spec:
       volumes:
         - name: nfs-server-mount
           nfs:
-            server: '10.110.247.173'
+            server: '{{ NFS_SERVER_COMPONENT_IP }}'
             path: /
