--- a/playbooks/roles/mlhub/templates/kube/models/deployment.yaml
+++ b/playbooks/roles/mlhub/templates/kube/models/deployment.yaml
@@ -46,5 +46,5 @@ spec:
       volumes:
         - name: nfs-server-mount
           nfs:
-            server: '{{ NFS_SERVER_COMPONENT_IP }}'
+            server: '** NFS_SERVER_COMPONENT_IP **'
             path: /
