--- a/playbooks/roles/mlhub/templates/kube/traefik/web-service.yaml
+++ b/playbooks/roles/mlhub/templates/kube/traefik/web-service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mlhub-web-traefik-service
-  selector:
-    app: mlhub-web-traefik-deployment
+  # selector:
+  #   app: mlhub-web-traefik-deployment
 
 spec:
   type: LoadBalancer
