Auth changes for tenants/tokens/auth and pod change

--- a/playbooks/roles/proxy/templates/docker/locations/pods.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/pods.conf
@@ -1,6 +1,9 @@
 # pods
 location /v3/pods
-{            
+{
+    ## Remove CORS header from nginx global so traefik can config
+    ## If there's two tapis-ui gets strict origin issues
+    proxy_hide_header 'Access-Control-Allow-Origin';
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
 
@@ -12,4 +15,3 @@ location /v3/pods
     proxy_redirect off;
     proxy_set_header Host $host;
 }
-
