--- a/playbooks/roles/proxy/templates/docker/locations/tokens.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/tokens.conf
@@ -9,6 +9,6 @@ location /v3/tokens
     proxy_pass $upstream;
     
     proxy_redirect off;
-    proxy_set_header Host localhost:5000;
+    proxy_set_header Host $host;
 }
 
