--- a/playbooks/roles/proxy/templates/kube/nginx/locations/pods.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/pods.conf
@@ -4,6 +4,9 @@
 location /v3/pods
 {
 {% if "pods" in proxy_nginx_service_list %}
+    ## Remove CORS header from nginx global so traefik can config
+    ## If there's two tapis-ui gets strict origin issues
+    proxy_hide_header 'Access-Control-Allow-Origin';
     client_max_body_size 10G;
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
