--- a/playbooks/roles/actors/templates/kube/api/nfs-pvc.yml
+++ b/playbooks/roles/actors/templates/kube/api/nfs-pvc.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: standard
+  storageClassName: {{actors_storage_class}}
   resources:
     requests:
       storage: 1Gi
