correct host for tenants needed

--- a/playbooks/roles/proxy/templates/kube/nginx/locations/tenants.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/tenants.conf
@@ -9,5 +9,5 @@ location /v3/tenants
     proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
 {% endif %}
     proxy_redirect off;
-    proxy_set_header Host localhost:5000;
+    proxy_set_header Host $host;
 }
