--- a/playbooks/roles/proxy/templates/docker/locations/tenants.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/tenants.conf
@@ -9,5 +9,5 @@ location /v3/tenants
     proxy_pass $upstream;            
     
     proxy_redirect off;
-    proxy_set_header Host localhost:5000;
+    proxy_set_header Host $host;
 }
