minor fixes before release

--- a/playbooks/roles/systems/templates/kube/api/deploy.yml
+++ b/playbooks/roles/systems/templates/kube/api/deploy.yml
@@ -65,6 +65,8 @@ spec:
             value: {{ systems_tms_tenant }}
           - name: TAPIS_TMS_CLIENT_ID
             value: {{ systems_tms_client_id }}
+          - name: TAPIS_TMS_ALLOWED_TENANTS
+            value: {{ systems_tms_allowed_tenants }}
           - name: TAPIS_TMS_CLIENT_SECRET
             valueFrom:
               secretKeyRef:
