--- a/playbooks/roles/actors/defaults/main/vars.yml
+++ b/playbooks/roles/actors/defaults/main/vars.yml
@@ -24,6 +24,7 @@ actors_spawner_docker_network: develop_abaco
 actors_kube_domain: tapis-test.svc.cluster.local
 actors_web_encryption_key: 
 actors_web_apim_public_key: null
+actors_service_nginx_kube_resolver: coredns.kube-system.svc.cluster.local valid=10s
 actors_service_tenants:
   - dev
   - admin
