--- a/playbooks/roles/actors/templates/kube/api/nginx-config.yml
+++ b/playbooks/roles/actors/templates/kube/api/nginx-config.yml
@@ -10,7 +10,7 @@ data:
         listen 80;
         server_name abaco.org;
         charset utf-8;
-        resolver coredns.kube-system.svc.cluster.local valid=10s;
+        resolver {{ actors_service_nginx_kube_resolver }};
 
         access_log /dev/stdout;
     
