variable storage class / typo fix

--- a/playbooks/roles/mlhub/templates/kube/nfs/pvc.yaml
+++ b/playbooks/roles/mlhub/templates/kube/nfs/pvc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: standard
+  storageClassName: {{ mlhub_storage_class }}
   resources:
     requests:
       storage: 20Gi
