--- a/playbooks/roles/proxy/templates/kube/nginx/locations/mlhub.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/mlhub.conf
@@ -1,10 +1,13 @@
-# ml-hub
+# mlhub
 location /v3/mlhub
 {
-#    auth_request /_auth;
-    error_page 500 /token-revoked.json;
-    proxy_pass http://mlhub-traefik:80;
-
+{% if "mlhub" in proxy_nginx_service_list %}
+    auth_request /_auth;
+    error_page 500 /token-revoked.json; 
+    proxy_pass http://mlhub-web-traefik-service:80;
+{% else %}
+    proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}        
     proxy_redirect off;
     proxy_set_header Host $host;
 }
