--- a/playbooks/roles/proxy/templates/kube/nginx/locations/mlhub.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/mlhub.conf
@@ -4,7 +4,7 @@ location /v3/mlhub
 {% if "mlhub" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
-    proxy_pass http://mlhub-web-traefik-service:80;
+    proxy_pass http://mlhub-traefik:80;
 {% else %}
     proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
 {% endif %}        
