yml is inevitable

--- a/playbooks/roles/mlhub/templates/kube/traefik/traefik-dynamic-config.yml
+++ b/playbooks/roles/mlhub/templates/kube/traefik/traefik-dynamic-config.yml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: traefik-dynamic-config
 data:
-  dynamic-config.yaml: |-
+  dynamic-config.yml: |-
     http:
       middlewares:
         path-strip-v3:
