--- a/playbooks/roles/mlhub/defaults/main/images.yml
+++ b/playbooks/roles/mlhub/defaults/main/images.yml
@@ -5,3 +5,7 @@ mlhub_inference_api_image: tapis/inference-api:dev
 mlhub_training_api_image: tapis/training-api:dev
 mlhub_nfs_server_image: itsthenetwork/nfs-server-alpine:latest
 mlhub_traefik_image: traefik:v3.2
+mlhub_artifact_ingester_image: tapis/mlhub-artifact-ingester:dev
+mlhub_artifact_publisher_image: tapis/mlhub-artifact-publisher:dev
+mlhub_artifact_db_image: mongo:8
+mlhub_artifact_mq_image: rabbitmq:3.9.11-management
