Add correct image and pull polciy for ingester and publisher

--- a/playbooks/roles/mlhub/templates/kube/artifact-ingester/deployment.yaml
+++ b/playbooks/roles/mlhub/templates/kube/artifact-ingester/deployment.yaml
@@ -40,8 +40,8 @@ spec:
               value: "5672"
             - name: ARTIFACT_OP_MQ_USER
               value: dev
-          image: tapis/mlhub-artifact-ingester:local
-          imagePullPolicy: Never
+          image: tapis/mlhub-artifact-ingester:dev
+          imagePullPolicy: Always
           name: artifact-ingester
           resources: {}
           tty: true
