change storage class

--- a/playbooks/roles/mlhub/templates/kube/artifact-mq/pvc.yml
+++ b/playbooks/roles/mlhub/templates/kube/artifact-mq/pvc.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: standard
+  storageClassName:  {{ mlhub_storage_class }}
   resources:
     requests:
       storage: 10Gi
