--- a/playbooks/roles/mlhub/templates/kube/nfs/deployment.yml
+++ b/playbooks/roles/mlhub/templates/kube/nfs/deployment.yml
@@ -18,6 +18,7 @@ spec:
       containers:
       - name: mlhub-nfs-server
         image: {{ mlhub_nfs_server_image }}
+        imagePullPolicy: Always
         securityContext:
           privileged: true
         env:
